--- a/src/components/firstSection/style.css
+++ b/src/components/firstSection/style.css
@@ -1,5 +1,13 @@
+.first-section-bg {
+    /*background-image: linear-gradient(to bottom, #000000, #1c1c1c, #2b2b2b, #3b3b3b, #4d4d4d);*/
+    /*box-shadow: 0 0 20px 10px #262626 inset;*/
+
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+
 .first-section-img {
-    background: black;
+    /*background: black;*/
+    /*background-color: rgba(0, 0, 0, 0.2);*/
     height: 10vh;
     width: 100%;
     text-align: center;
@@ -16,14 +24,33 @@
 }
 
 .first-section-photo-block {
-    border-radius: 20px;
+    padding: 0 5vh;
     overflow: hidden;
     text-align: center;
     width: 100%;
-    height: 60vh;
+    height: max-content;
 }
 
 .first-section-photo {
     max-width: 100%;
     height: auto;
+    border-radius: 20px;
+}
+
+.first-section-quote {
+    color: white;
+    font-size: 1.5em;
+    padding: 2vh;
+    text-align: center;
+    font-family: 'Pacifico', cursive;
+    text-shadow: 1vh 1vw 1vw gray, 1vh 1vh 1vw gray;
+}
+
+.first-section-quote-author {
+    color: white;
+    text-align: center;
+    font-size: 1.2em;
+    font-family: 'Pacifico', cursive;
+    margin-bottom: 2vh;
+    text-shadow: 1vh 1vw 1vw gray, 1vh 1vh 1vw gray;
 }
