--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: black;
+  background-image: linear-gradient(to bottom, #000000, #1c1c1c, #2b2b2b, #3b3b3b, #4d4d4d);
+  box-shadow: 0 0 20px 10px #262626 inset;
 }
 
 code {
