--- a/src/components/secondSection/style.css
+++ b/src/components/secondSection/style.css
@@ -1,3 +1,8 @@
+.second-section-bg {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    padding-bottom: 2vh;
+}
+
 .second-section-photos {
     padding: 5vh 5vh 0;
     overflow: hidden;
