--- a/src/components/timerBlock/style.css
+++ b/src/components/timerBlock/style.css
@@ -1,5 +1,5 @@
 .feedback-section-bg {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    /*border-bottom: 1px solid rgba(0, 0, 0, 0.3);*/
     padding-bottom: 2vh;
 }
 
@@ -10,9 +10,9 @@
 }
 
 .feedback-section-timer-wrap {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    place-content: center;
 }
 
 .feedback-section-timer-app {
