--- a/src/components/feedbackForm/style.css
+++ b/src/components/feedbackForm/style.css
@@ -17,16 +17,41 @@
 .feedback-form-input {
     margin: 1em auto 0;
     display: block;
-    height: 3em;
-    width: 100%;
+    height: 1.7em;
+    width: 80%;
     font-size: 2em;
     border-radius: 20px;
     text-align: center;
-    background: wheat;
+    background: white;
+}
+
+.feedback-form-input-rules {
+    text-align: right;
+    padding-right: 2.8em;
+    color: darkred;
+}
+
+.custom-textarea {
+    height: 3.8em;
+}
+
+.feedback-form-input-radio {
+    margin: 1em auto 0;
+    width: 80%;
+    font-size: 1.5em;
+    /*border: 1px solid black;*/
+    border-radius: 20px;
+    height: 2em;
 }
 
 .feedback-form-sended {
     color: white;
+    font-size: 1.5em;
+    text-align: center;
+}
+
+.feedback-form-validation {
+    color: red;
     font-size: 1.5em;
     text-align: center;
 }
