--- a/src/components/feedbackForm/style.css
+++ b/src/components/feedbackForm/style.css
@@ -29,7 +29,7 @@
 .feedback-form-input-rules {
     text-align: right;
     padding-right: 2.8em;
-    color: darkred;
+    color: red;
 }
 
 .custom-textarea {
