--- a/src/components/feedbackForm/style.css
+++ b/src/components/feedbackForm/style.css
@@ -19,7 +19,7 @@
     display: block;
     height: 1.7em;
     width: 80%;
-    font-size: 2em;
+    font-size: 1.5em;
     border-radius: 20px;
     text-align: center;
     background: white;
@@ -33,13 +33,13 @@
 }
 
 .custom-textarea {
-    height: 3.8em;
+    height: 3em;
 }
 
 .feedback-form-input-radio {
     margin: 1em auto 0;
     width: 80%;
-    font-size: 1.5em;
+    font-size: 1.3em;
     /*border: 1px solid black;*/
     border-radius: 20px;
     height: 2em;
@@ -49,6 +49,7 @@
     color: white;
     font-size: 1.5em;
     text-align: center;
+    color: green;
 }
 
 .feedback-form-validation {
