--- a/src/components/feedbackForm/style.css
+++ b/src/components/feedbackForm/style.css
@@ -1,17 +1,23 @@
 .feedback-from-bg {
-    margin: 3em auto;
+    margin: 5vh auto;
 }
 
 .feedback-form-title {
     color: white;
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2em;
+    width: 90%;
+    margin: 0 auto;
+    font-family: 'Playfair Display', serif;
 }
 
 .feedback-form-description {
+    font-family: 'Playfair Display', serif;
     color: white;
+    margin: 0 auto;
     text-align: center;
     font-size: 1.5em;
+    width: 90%;
 }
 
 .feedback-form-input {
@@ -24,15 +30,18 @@
     text-align: center;
     background: white;
     color: black;
+    font-family: 'Playfair Display', serif;
 }
 
 .feedback-form-input-rules {
     text-align: right;
     padding-right: 2.8em;
     color: red;
+    font-family: 'Playfair Display', serif;
 }
 
 .custom-textarea {
+    font-family: 'Playfair Display', serif;
     height: 3em;
 }
 
@@ -43,17 +52,19 @@
     /*border: 1px solid black;*/
     border-radius: 20px;
     height: 2em;
+    font-family: 'Playfair Display', serif;
 }
 
 .feedback-form-sended {
-    color: white;
     font-size: 1.5em;
     text-align: center;
     color: green;
+    font-family: 'Playfair Display', serif;
 }
 
 .feedback-form-validation {
     color: red;
     font-size: 1.5em;
     text-align: center;
+    font-family: 'Playfair Display', serif;
 }
