--- a/src/components/firstSection/style.css
+++ b/src/components/firstSection/style.css
@@ -8,7 +8,8 @@
 .first-section-img {
     /*background: black;*/
     /*background-color: rgba(0, 0, 0, 0.2);*/
-    height: 10vh;
+    padding-top: 1vh;
+    height: 9vh;
     width: 100%;
     text-align: center;
     display: flex;
@@ -17,7 +18,7 @@
 }
 
 .first-section-description {
-    font-family: 'Pacifico', cursive;
+    font-family: 'Marck Script', cursive;
     color: white;
     font-size: 2em;
     padding: 0 1vh;
@@ -42,7 +43,7 @@
     font-size: 1.5em;
     padding: 2vh;
     text-align: center;
-    font-family: 'Pacifico', cursive;
+    font-family: 'Marck Script', cursive;
     text-shadow: 1vh 1vw 1vw gray, 1vh 1vh 1vw gray;
 }
 
@@ -50,7 +51,7 @@
     color: white;
     text-align: center;
     font-size: 1.2em;
-    font-family: 'Pacifico', cursive;
     margin-bottom: 2vh;
+    font-family: 'Marck Script', cursive;
     text-shadow: 1vh 1vw 1vw gray, 1vh 1vh 1vw gray;
 }
