--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -1,10 +1,12 @@
 .footer {
     border-top: 1px solid rgba(0, 0, 0, 0.3);
     width: 100%;
-    height: auto
+    height: auto;
+    padding-bottom: 5vh;
 }
 
 .footer-title {
+    font-family: 'Playfair Display', serif;
     text-align: center;
     color: white;
     font-size: 1.5em;
