--- a/src/components/firstSection/style.css
+++ b/src/components/firstSection/style.css
@@ -2,7 +2,7 @@
     /*background-image: linear-gradient(to bottom, #000000, #1c1c1c, #2b2b2b, #3b3b3b, #4d4d4d);*/
     /*box-shadow: 0 0 20px 10px #262626 inset;*/
 
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    /*border-bottom: 1px solid rgba(0, 0, 0, 0.3);*/
 }
 
 .first-section-img {
