--- a/src/components/feedbackForm/style.css
+++ b/src/components/feedbackForm/style.css
@@ -1,5 +1,6 @@
 .feedback-from-bg {
-    margin: 5vh auto;
+    padding: 2vh 0;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 .feedback-form-title {
@@ -21,7 +22,7 @@
 }
 
 .feedback-form-input {
-    margin: 1em auto 0;
+    margin: 0.2em auto 0;
     display: block;
     height: 1.7em;
     width: 80%;
@@ -46,12 +47,11 @@
 }
 
 .feedback-form-input-radio {
-    margin: 1em auto 0;
-    width: 80%;
-    font-size: 1.3em;
+    max-width: 90%;
+    font-size: 1.5em;
+    margin: 0 auto;
     /*border: 1px solid black;*/
-    border-radius: 20px;
-    height: 2em;
+
     font-family: 'Playfair Display', serif;
 }
 
@@ -60,6 +60,8 @@
     text-align: center;
     color: green;
     font-family: 'Playfair Display', serif;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .feedback-form-validation {
@@ -67,4 +69,11 @@
     font-size: 1.5em;
     text-align: center;
     font-family: 'Playfair Display', serif;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.feedback-form-send-input {
+    text-align: center;
+    margin-top: 0.5em;
 }
