--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -8,8 +8,8 @@
 .footer-address {
     font-family: 'Playfair Display', serif;
     text-align: center;
-    color: black;
-    font-size: 1em;
+    color: white;
+    font-size: 1.5em;
     width: 90%;
     margin: 0 auto 2vh;
 }
@@ -22,8 +22,9 @@
 
 .footer-maps-description {
     color: black;
-    font-weight: bold;
+    /*font-weight: bold;*/
     text-decoration: underline;
+    font-size: 1.5em;
 }
 
 .footer-title {
