--- a/src/components/firstSection/style.css
+++ b/src/components/firstSection/style.css
@@ -1,12 +1,13 @@
 .first-section-bg {
-    width: 90%;
-    margin: 2vh auto 0;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .first-section-maps-wrap {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 2vh;
 }
 
 .first-section-maps {
@@ -39,4 +40,13 @@
 .bouquet {
     max-width: 100%;
     height: auto;
+}
+
+.first-section-janat {
+    font-family: 'Playfair Display', serif;
+    text-align: center;
+    color: white;
+    font-size: 1.5em;
+    width: 90%;
+    margin: 0 auto;
 }
