--- a/src/components/secondSection/style.css
+++ b/src/components/secondSection/style.css
@@ -18,7 +18,7 @@
 }
 
 .second-section-invite {
-    color: white;
+    color: #757574;
     font-size: 1.5em;
     padding: 2vh;
     text-align: center;
