--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to bottom, #696969, #808080, #A9A9A9);
+  background-image: linear-gradient(to bottom, #d9d0b8, #e8dec3, #d4cdbc);
   box-shadow: 0 0 20px 10px #262626 inset;
 }
 
