--- a/src/components/timerBlock/style.css
+++ b/src/components/timerBlock/style.css
@@ -7,7 +7,7 @@
     font-family: 'Playfair Display', serif;
     width: 90%;
     text-align: center;
-    color: #757574;
+    color: white;
     font-size: 2em;
     margin: 0 auto;
 }
@@ -20,7 +20,7 @@
 
 .feedback-section-timer-app {
     text-align: center;
-    color: #757574;
+    color: white;
     margin: 0 auto;
     width: 90%;
     font-family: 'Playfair Display', serif;
