--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -7,7 +7,7 @@
 .footer-address {
     font-family: 'Playfair Display', serif;
     text-align: center;
-    color: #757574;
+    color: white;
     font-size: 1.5em;
     width: 90%;
     margin: 0 auto 2vh;
@@ -23,7 +23,7 @@
 .footer-title {
     font-family: 'Playfair Display', serif;
     text-align: center;
-    color: #757574;
+    color: white;
     font-size: 1.5em;
     width: 90%;
     margin: 0 auto 3vh;
