--- a/src/components/firstSection/style.css
+++ b/src/components/firstSection/style.css
@@ -45,7 +45,7 @@
 .first-section-janat {
     font-family: 'Playfair Display', serif;
     text-align: center;
-    color: white;
+    color: black;
     font-size: 1.5em;
     width: 90%;
     margin: 0 auto;
