--- a/src/components/secondSection/style.css
+++ b/src/components/secondSection/style.css
@@ -18,12 +18,12 @@
 }
 
 .second-section-invite {
-    color: white;
+    color: black;
     font-size: 1.5em;
     padding: 0 2vh 2vh;
     text-align: center;
     font-family: 'Marck Script', cursive;
-    text-shadow: 1vh 1vw 1vw gray, 1vh 1vh 1vw gray;
+    /*text-shadow: 1vh 1vw 1vw gray, 1vh 1vh 1vw gray;*/
 }
 
 .second-section-bouquet {
