--- a/src/components/secondSection/style.css
+++ b/src/components/secondSection/style.css
@@ -8,7 +8,6 @@
     text-align: center;
     width: 100%;
     height: max-content;
-
 }
 
 .second-section-photo {
@@ -18,7 +17,7 @@
 }
 
 .second-section-invite {
-    color: black;
+    color: white;
     font-size: 1.5em;
     padding: 0 2vh 2vh;
     text-align: center;
