--- a/src/components/rules-section/style.css
+++ b/src/components/rules-section/style.css
@@ -1,22 +1,22 @@
 .rules-section-bg {
-    /*padding: 0 0 5vh;*/
-    /*border-bottom: 5px solid rgba(0, 0, 0, 0.3);*/
+  /*padding: 0 0 5vh;*/
+  /*border-bottom: 5px solid rgba(0, 0, 0, 0.3);*/
 }
 
 .rules-title {
-    color: white;
-    text-align: center;
-    font-size: 2em;
-    width: 90%;
-    margin: 0 auto;
-    font-family: 'Playfair Display', serif;
+  color: white;
+  text-align: center;
+  font-size: 2em;
+  width: 90%;
+  margin: 15px auto 0;
+  font-family: 'Marck Script', cursive;
 }
 
 .rules-first {
-    font-family: 'Playfair Display', serif;
-    color: white;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 1.2em;
-    width: 90%;
+  font-family: 'Marck Script', cursive;
+  color: white;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 1.2em;
+  width: 90%;
 }
