--- a/src/components/pages/languageSelection/style.css
+++ b/src/components/pages/languageSelection/style.css
@@ -7,27 +7,15 @@
     flex-direction: column;
 }
 
-.language-select {
-    color: white;
-    text-align: center;
-    margin-bottom: 5vh;
-    width: 80%;
-}
-
-.language-wrap {
-    display: flex;
-    justify-content: space-evenly;
-}
-
 .languages {
     color: white;
     text-align: center;
-    margin-bottom: 2.5vh;
-    width: 15%;
+    width: 20%;
     height: max-content;
     background: gray;
     border-radius: 20px;
     transition: 0.5s;
+    margin: 0 auto 2.5vh;
 }
 
 .language-flags {
